# initiative_IT

My_Chatbot/: .env  chat.py  pyproject.toml
practice_python/: if_else_practice.py  lambda_func.py  practice_from_try_catch.ipynb  recursor function_pr.py  structure_of_variables.py
recursive_factorial.py/: factorial.py
tasks_gov_it/: data_types.py  loop_in_list.py  table.py
tasks_gov_it/function assignment/: Q1.py  Q2.py
tasks_gov_it/if_else_marksheet/: students_marksheet.py
tasks_gov_it/light &cpu project/: light &cpu project.py
tasks_gov_it/table in try catch/: table in try_catch.py
variables_in_python/: structure_of_variables.py
